--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   border-radius: 8px;
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   text-align: center;
-  height: 52vh;
+  height: auto;
 }
 
 h1 {
